tests/ui/coherence/conflicting-impl-with-err.stderr
error[E0433]: cannot find module or crate `nope` in this scope
  --> $DIR/conflicting-impl-with-err.rs:4:11
   |
LL | impl From<nope::Thing> for Error {
   |           ^^^^ use of unresolved module or unlinked crate `nope`
   |
   = help: you might be missing a crate named `nope`

error[E0433]: cannot find module or crate `nope` in this scope
  --> $DIR/conflicting-impl-with-err.rs:5:16
   |
LL |     fn from(_: nope::Thing) -> Self {
   |                ^^^^ use of unresolved module or unlinked crate `nope`
   |
   = help: you might be missing a crate named `nope`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
